<resources>
    <string name="app_name">LK-Store</string>
    <string name="registrarme_btn">Registrarme</string>
    <string name="nombre">User Name</string>
    <string name="correo">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="ingresar">Login</string>
    <string name="notHaveAccount">No tienes una cuenta?</string>
    <string name="notHaveAccount_goto">Crea una aquí!</string>
    <string name="haveAccount">Ya tienes una cuenta?</string>
    <string name="haveAccount_goto">Ingresa ahora!</string>
    <string name="welcome">Bienvenido a</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="menus">Menus</string>
    <string name="carrito">Carrito</string>
    <string name="ajustes">Ajustes</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_historial">Ver Historial</string>
    <string name="change_password">Change Password</string>
    <string name="userPhoneNumberExample">+54 9 11 6534 8756</string>
    <string name="userNameExample">Lucas 23</string>
    <string name="userEmailExample">test@example.com</string>
    <string name="userPhoneLabel">Teléfono:</string>
    <string name="userEmailLaber">Email:</string>
    <string name="userPointsLabel">Puntos:</string>
    <string name="userPointsExample">100</string>
    <string name="userAddresLabel">Dirección:</string>
    <string name="userAddresExample">Av. Corrientes 2037, C1001 Cdad. Autónoma de Buenos Aires</string>
    <string name="back">Volver</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="ver_producto">Ver Producto</string>
    <string name="second_user_icon_profile">https://cdn-icons-png.flaticon.com/512/8847/8847419.png</string>
    <string name="exampleText">TextView</string>
    <string name="menus_en_descuento">Menus en Descuento</string>
    <string name="producto">Producto</string>
    <string name="actualizar_icono">Actualizar Icono</string>
    <string name="mis_rdenes">Mis Órdenes</string>
    <string name="no_hay_rdenes">No hay órdenes</string>
    <string name="no_tienes_rdenes_realizadas">No tienes órdenes realizadas</string>
    <string name="explora_nuestro_men_y_realiza_tu_primer_pedido">¡Explora nuestro menú y realiza tu primer pedido!</string>
    <string name="consultas_respondidas">Consultas Respondidas</string>
    <string name="no_hay_consultas_respondidas">No hay consultas respondidas</string>
    <string name="consultas_pendientes">Consultas Pendientes</string>
    <string name="no_hay_consultas_pendientes">No hay consultas pendientes</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="confirmar_compra">Confirmar Compra</string>
    <string name="realice_su_consulta">Realice su consulta</string>
    <string name="describe_tu_consulta">Describe tu consulta</string>
    <string name="enviar_consulta">Enviar consulta</string>
    <string name="ver_mis_consultas">Ver Mis Consultas</string>
    <string name="name_user_edit">Name</string>
    <string name="email_user_edit">Email</string>
    <string name="phone_number_user_edit">Phone Number</string>
    <string name="address_user_edit">Address</string>
    <string name="guardar_user_edit">Guardar</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="orden_example">Orden #02afe3ef-d525-410e-bb61</string>
    <string name="date_example">Sat Nov 09 21:04:27 GMT 2024</string>
    <string name="order_content_example">1× Big Mac\n2× Menu #2</string>
    <string name="price_value">$36.92</string>
    <string name="cheeseburger_small_fries">Cheeseburger | Small Fries</string>
    <string name="_9_99">$9.99</string>
    <string name="ver_men">Ver Menú</string>
    <string name="escribe_tu_respuesta">Escribe tu respuesta...</string>
    <string name="responder">Responder</string>
    <string name="email">Email</string>
    <string name="cambiar_permisos">Cambiar Permisos</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="activo">Activo</string>
    <string name="porcentaje_de_descuento">Porcentaje de descuento</string>
    <string name="editar">Editar</string>
    <string name="codigo">Codigo</string>
    <string name="eliminar">Eliminar</string>
</resources>