<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="always"
        android:id="@+id/home_menu_btn"
        android:title=" "
        android:icon="@drawable/home_icon"/>
    <item
        app:showAsAction="ifRoom"
        android:title=" "
        android:icon="@drawable/menu_icon">

        <menu>
            <item
                android:id="@+id/my_account"
                android:title="@string/mi_cuenta"
                app:showAsAction="never"
                android:icon="@drawable/profile_icon"
                />

            <item
                android:id="@+id/food_menu"
                android:title="@string/menus"
                app:showAsAction="never"
                android:icon="@drawable/food_list_icon"/>

            <item
                android:id="@+id/shop_cart"
                android:title="@string/carrito"
                app:showAsAction="never"
                android:icon="@drawable/shop_icon"/>

            <item
                android:id="@+id/adminmenu"
                android:title="@string/admin_menu"
                app:showAsAction="never"
                android:icon="@drawable/adminmenu_icon"/>

        </menu>
    </item>
</menu>