<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultas_respondidas"
        android:textStyle="bold"
        android:textSize="@dimen/_18sp"
        android:layout_marginBottom="@dimen/_8dp"/>

    <TextView
        android:id="@+id/tvNoAnswered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_consultas_respondidas"
        android:gravity="center"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAnswered"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultas_pendientes"
        android:textStyle="bold"
        android:textSize="@dimen/_18sp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_8dp"/>

    <TextView
        android:id="@+id/tvNoPending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_consultas_pendientes"
        android:gravity="center"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPending"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_weight="1"/>

</LinearLayout>