<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp">

        <EditText
            android:id="@+id/codeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codigo"
            android:inputType="text"
            android:maxLength="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp">

        <EditText
            android:id="@+id/percentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/porcentaje_de_descuento"
            android:inputType="numberDecimal"
            android:maxLength="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_16dp">

        <TextView
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activo"
            android:textSize="@dimen/_16sp"/>

        <Switch
            android:id="@+id/activeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/guardar"/>
    </LinearLayout>
</LinearLayout>