<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".generalFragments.MyAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".generalFragments.MyAccountFragment"
        android:padding="@dimen/_16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/profile_img_dp"
            android:layout_height="@dimen/profile_img_dp"
            android:layout_marginTop="@dimen/profile_img_margin"
            android:src="@drawable/user_profile"
            android:background="@drawable/rounded_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            android:text="@string/userNameExample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage" />

        <LinearLayout
            android:id="@+id/userInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@id/userName">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userPhoneLabel"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/_8dp" />

                <TextView
                    android:id="@+id/userPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userPhoneNumberExample" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userEmailLaber"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/_8dp" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userEmailExample" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userAddresLabel"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/_8dp" />

                <TextView
                    android:id="@+id/userAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userAddresExample" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/downloadImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar_icono"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userInfoLayout"
            app:layout_constraintVertical_bias="0.757" />

        <LinearLayout
            android:id="@+id/linearButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userInfoLayout"
            app:layout_constraintVertical_bias="0.956"
            tools:layout_editor_absoluteX="@dimen/_0dp">

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>