<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_8dp"
    android:layout_marginVertical="@dimen/_4dp"
    app:cardCornerRadius="@dimen/_12dp"
    app:cardElevation="@dimen/_1dp"
    app:cardBackgroundColor="#FFF5F9"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_8dp">

            <TextView
                android:id="@+id/orderIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="#1A1A1A"
                android:textSize="@dimen/_14sp"
                tools:text="@string/orden_example"/>

            <TextView
                android:id="@+id/orderDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dp"
                android:textColor="#666666"
                android:textSize="@dimen/_12sp"
                tools:text="@string/date_example"/>
        </LinearLayout>

        <TextView
            android:id="@+id/orderItemsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:textColor="#333333"
            android:textSize="@dimen/_14sp"
            android:lineSpacingExtra="@dimen/_4dp"
            tools:text="@string/order_content_example"/>

        <TextView
            android:id="@+id/orderTotalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="#1A1A1A"
            android:textSize="@dimen/_16sp"
            android:fontFamily="sans-serif-medium"
            tools:text="@string/price_value"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>