<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".generalFragments.MyOrdersFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/windowBackground"
        android:elevation="@dimen/_4dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/back_btn_dp"
                android:layout_height="@dimen/back_btn_dp"
                android:layout_marginStart="@dimen/_4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:padding="@dimen/_12dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/mis_rdenes"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ordersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:clipToPadding="false"
        android:padding="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/emptyOrdersView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:layout_width="@dimen/img_dp"
            android:layout_height="@dimen/img_dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:src="@drawable/ic_empty_orders"
            android:alpha="0.6"
            android:contentDescription="@string/no_hay_rdenes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_rdenes_realizadas"
            android:textSize="@dimen/_18sp"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorSecondary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/explora_nuestro_men_y_realiza_tu_primer_pedido"
            android:textSize="@dimen/_14sp"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorTertiary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>