<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_8dp"
        app:cardElevation="@dimen/_4dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16dp"
            android:background="@color/modal_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/back"
                    android:padding="@dimen/_8dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/realice_su_consulta"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/edit_text_background"
                android:orientation="vertical"
                android:padding="@dimen/_4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:text="@string/userEmailLaber"
                    android:textColor="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/edit_text_background"
                android:orientation="vertical"
                android:padding="@dimen/_4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:text="@string/describe_tu_consulta"
                    android:textColor="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/consultaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:padding="@dimen/_8dp" />

            </LinearLayout>

            <Button
                android:id="@+id/enviarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_background"
                android:text="@string/enviar_consulta"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/verConsultasButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:background="@drawable/secondary_button_background"
                android:text="@string/ver_mis_consultas"
                android:textColor="@android:color/black" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8dp"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>