<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back"
            android:padding="@dimen/_8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/carrito_de_compras"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/total_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:textAlignment="center"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/confirmar_compra"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>